--- a/back/locallibrary/catalog/templates/book_detail.html
+++ b/back/locallibrary/catalog/templates/book_detail.html
@@ -3,14 +3,22 @@
 {% block content %}
     <h1>Title: {{book.title}}</h1>
 
-    <p><strong>Author:</strong><a href=">{{ books.author}}"</a></p>
+    <p><strong>Author:</strong><a>{{ book.author }}</a></p>
     <p><strong>ISBN:</strong>{{ book.isbn}}</p>
     <p><strong>Summary:</strong>{{ book.summary}}</p>
-    <p><strong>Genre:</strong>
-        {% for genre in book.genre.all %}
-            {{ genre.name }}{% if not forloop.last %}, {% endif %}
-        {% endfor %}
-    </p>
-    <p><strong>Language:</strong>{{ book.language}}</p>
+    <p><strong>Genre:</strong> {% for genre in book.genre.all %} {{ genre }} {% if not forloop.last %}, {% endif %} {% endfor %}</p>
 
+    <div style="margin-left: 20px; margin-top: 20px;">
+        <h4>Copies </h4>
+
+        {% for copy in book.bookinstance_set.all %}
+        <hr>
+        <p class="{% if copy.status == 'a' %}text-succes{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display}}</p>
+        {% if copy.status != 'a' %}
+            <p><strong>Due to be returned:</strong>{{copy.due_back}}</p>
+        {% endif %}
+        <p><strong>Imprint:</strong>{{ copy.imprint}}</p>
+        <p class=""text-muted"><strong>Id:</strong>{{copy.id}}</p>
+        {% endfor %}
+    </div>
 {% endblock %}
